--- a/cet.html
+++ b/cet.html
@@ -16,12 +16,33 @@
             Una botella de amor es una botella de plástico limpia que se llena con plásticos de un solo uso, 
             aquellos que por cuestiones técnicas y económicas, no se pueden reciclar, como envoltorios y bolsas.
         </p>
-        <p>
-            más información: <!--acá pongan más informacion o img-->
+      <p>
+            más información: <a href="https://www.instagram.com/sanisidrogob/">instagram</a><!--acá pongan más informacion o img-->
         </p>
     </div>
+    <div>
+        <img src="c:\Users\educa\AppData\Local\Packages\microsoft.microsoftedge_8wekyb3d8bbwe\AC\#!001\MicrosoftEdge\Cache\446QK5WY\caba[1].jpg" alt="mapa">
 
-
+        
+            <ul>Comuna 1</ul>
+            <li>Plaza Rosario Vera Peñaloza: Av. San Juan y Chacabuco </li>
+            <li>Barrio Rodrigo Bueno </li>
+            
+            <li>Comuna 2</li>
+            <li>Comuna 3</li>
+            <li>Comuna 4</li>
+            <li>Comuna 5</li>
+            <li>Comuna 6</li>
+            <li>Comuna 7</li>
+            <li>Comuna 8</li>
+            <li>Comuna 9</li>
+            <li>Comuna 10</li>
+            <li>Comuna 11</li>
+            <li>Comuna 12</li>
+            <li>Comuna 13</li>
+            <li>Comuna 14</li>
+            <ul>Comuna 15</ul>
+    </div>
     </header>
 </body>
 </html>
