--- a/cet.html
+++ b/cet.html
@@ -21,7 +21,7 @@
         </p>
     </div>
     <div>
-        <img src="c:\Users\educa\AppData\Local\Packages\microsoft.microsoftedge_8wekyb3d8bbwe\AC\#!001\MicrosoftEdge\Cache\446QK5WY\caba[1].jpg" alt="mapa">
+        <img src="https://observatorioamba.org/images/pyp/interactivos/caba.jpg" alt="mapa">
 
         
             <ul>Comuna 1</ul>
