--- a/borrador.html
+++ b/borrador.html
@@ -53,8 +53,51 @@
            <h3>¿Dónde podemos encontrar PUNTOS VERDES en C.A.B.A.?</h3>
            <img src="https://observatorioamba.org/images/pyp/interactivos/caba.jpg" alt="mapa">
            <ul>Comuna 1</ul>
+            <li> Plaza San Martín: Av. Santa Fe y Maipú</li>
+            <li>Punto Verde Puerto Madero: Av. Alicia Moreau de Justo y Azucena Villaflor </li>
             <li>Plaza Rosario Vera Peñaloza: Av. San Juan y Chacabuco </li>
-            <li>Barrio Rodrigo Bueno </li>
+           <ul>Comuna 2</ul>
+            <li>Plaza Monseñor De Andrea: Anchorena y Av. Córdoba </li>
+            <li>Plazoleta Reino de Tailandia: Av. Pueyrredón y Vicente López</li>
+           <ul>Comuna3</ul>
+            <li>Plaza 1ro de Mayo: Hipólito Yrigoyen y Pasco</li>
+           <ul>Comuna 4</ul>
+            <li>Parque Patricios: Av. Caseros y Monteagudo</li>
+            <li>Plaza Colombia: Av. Montes de Oca y Brandsen</li>
+           <ul>Comuna 5</ul>
+            <li>Plaza Mariano Boedo: Estados Unidos y Sánchez de Loria</li>
+            <li>Plaza Almagro: Sarmiento y Bulnes</li>
+           <ul>Comuna 6</ul>
+            <li>Parque Rivadavia: Av. Rivadavia y Florencio Balcarce</li>
+            <li>Parque Centenario: Av. Patricias Argentinas y Av. Roentgen</li>
+           <ul>Comuna 7</ul>
+            <li>Plaza Pueyrredón: Yerbal y Artigas</li>
+            <li>Parque Chacabuco: Av. Asamblea y Hortiguera</li>
+           <ul>Comuna 8</ul>
+            <li>Plaza Sudamérica: Av. Piedra Buena y Av. Fernández de la Cruz</li>
+            <li>Estación Villa Soldati: Lafuente y Corrales</li>
+           <ul>Comuna 9</ul>
+            <li>Parque Avellaneda: Av. Directorio y Fernández </li>
+            <li>Parque Santojanni: Lisandro de La Torre y Patrón</li>
+           <ul>Comuna 10</ul>
+            <li>Plaza Don Bosco: Av. Lope de Vega y Elpidio González</li>
+            <li>Plaza Vélez Sarfield: Av. Avellaneda y Chivilcoy</li>
+           <ul>Comuna 11</ul>
+            <li>Plaza Aristóbulo del Valle: Campana y Baigorria </li>
+            <li>Plaza Arenales: Nueva York y Mercedes </li>
+           <ul>Comuna 12</ul>
+            <li>Parque Saavedra: Roque Pérez y Paroissien</li>
+            <li>Plaza Leandro N. Alem: Artigas y Larsen</li>
+           <ul>Comuna 13</ul>
+            <li>Plaza Manuel Belgrano: Cuba y Av. Juramento</li>
+            <li>Plaza Balcarce: Manzanares y Vuelta de Obligado</li>
+           <ul>Comuna 14</ul>
+            <li>Plaza Güemes: Medrano y Charcas</li>
+            <li>Plaza República de Bolivia: Av. Libertador y Olleros</li>
+            <li>Plaza Palermo Viejo: Malabia y Costa Rica</li>
+           <ul>Comuna 15</ul>
+            <li>Parque Los Andes: Av. Dorrego y Av. Guzmán</li>
+            <li>Plaza 25 de Agosto: Charlone y Heredia</li>
        </div>
     <!--La parte de algo interactivo como un forms lo vemos desp y si quieren agregar algo más como alguna info sobre nos o alguna caja para que pregunten cualquier duda que tenga la persona q esté en la web-->
 
