--- a/borrador.html
+++ b/borrador.html
@@ -51,7 +51,7 @@
         
        <div> <!--acá dejamos la información sobre los puntos verdes (agregamos direcciones, mapas, alguna info con texto)-->
            <h3>¿Dónde podemos encontrar PUNTOS VERDES en C.A.B.A.?</h3>
-           <img src="https://observatorioamba.org/images/pyp/interactivos/caba.jpg" alt="mapa">
+           <img src="https://observatorioamba.org/images/pyp/interactivos/caba.jpg" alt="mapa" style="width:500px;height:600px;">
            <ul>Comuna 1</ul>
             <li> Plaza San Martín: Av. Santa Fe y Maipú</li>
             <li>Punto Verde Puerto Madero: Av. Alicia Moreau de Justo y Azucena Villaflor </li>
