--- a/cet.html
+++ b/cet.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Proyecto recilaje</title>
+    <title>Proyecto reciclaje</title>
 </head>
 <body>
     <header>
