--- a/borrador.html
+++ b/borrador.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Proyecto recilaje</title>
+    <title>Proyecto reciclaje</title>
+    <link rel="stylesheet" href="/inicio.css">
 </head>
 <body>
     <header>
-        <h1>Utilizar, Reciclar y vivir más</h1>
+        <h1 class="titulo">Utilizar, Reciclar y vivir más</h1>
         <!--Acá va el menu-->
         <div>
            <ul>
@@ -26,7 +27,7 @@
     <main>
         <!--Esta sería una pequeña intro-->
        <div>
-        <h3>¿Hasta cuándo vamos a seguir contaminando y destruyendo este planeta?</h3>
+        <h3 class="subtitulo">¿Hasta cuándo vamos a seguir contaminando y destruyendo este planeta?</h3>
         <h4>
             <p> Hasta donde sabemos,  la contaminación se ha convertido en uno de los desafíos más urgentes y complejos a los que nos enfrentamos. Afecta a todos los rincones del planeta y tiene un impacto significativo en la salud humana, la biodiversidad y el equilibrio de los ecosistemas. A través de esta plataforma, nos comprometemos a informar, educar y movilizar a las personas para que comprendan mejor la naturaleza de la contaminación y sus consecuencias, así como las acciones que podemos tomar para mitigar sus efectos. <br> 
                 Aquí, encontrarás información sobre los diversos tipos de contaminación, incluyendo la del aire, agua y suelo. Exploraremos las causas principales de estos problemas, sus efectos devastadores, y las innovaciones y políticas que están siendo implementadas para combatirlos. <br>
@@ -35,7 +36,7 @@
        </div>
         <!--acá empezamos con el tema de lo q pasa en el mundo (datos reales, algún link de algun noticia x ahí, videos, imágenes); abarcamos el tema de la CONTAMINACIÓN-->
        <div>
-          <h3>¿Qué deberíamos hacer para mejorar nuestra situación?</h3>
+          <h3 class="subtitulo">¿Qué deberíamos hacer para mejorar nuestra situación?</h3>
           <h4>
               <p>Te invitamos a participar en nuestros proyectos de sostenibilidad y acción ciudadana. Estas iniciativas están diseñadas para que cada individuo pueda aportar su granito de arena y ser parte de un movimiento global para combatir la contaminación y proteger nuestro planeta. <br>
               No importa cuán grande o pequeña sea tu contribución, cada acción cuenta y suma hacia un cambio positivo. Al unirte a nuestras iniciativas, no solo estarás ayudando a mejorar el medio ambiente, sino que también tendrás la oportunidad de aprender, crecer y conectarte con personas que comparten tu pasión por la sostenibilidad. Creemos que juntos podemos lograr un impacto significativo y duradero. <br>
@@ -50,52 +51,52 @@
        </div>
         
        <div> <!--acá dejamos la información sobre los puntos verdes (agregamos direcciones, mapas, alguna info con texto)-->
-           <h3>¿Dónde podemos encontrar PUNTOS VERDES en C.A.B.A.?</h3>
+           <h3 class="subtitulo">¿Dónde podemos encontrar PUNTOS VERDES en C.A.B.A.?</h3>
            <img src="https://observatorioamba.org/images/pyp/interactivos/caba.jpg" alt="mapa" style="width:500px;height:600px;">
-           <ul>Comuna 1</ul>
+           <ul class="comuna">Comuna 1</ul>
             <li> Plaza San Martín: Av. Santa Fe y Maipú</li>
             <li>Punto Verde Puerto Madero: Av. Alicia Moreau de Justo y Azucena Villaflor </li>
             <li>Plaza Rosario Vera Peñaloza: Av. San Juan y Chacabuco </li>
-           <ul>Comuna 2</ul>
+           <ul class="comuna">Comuna 2</ul>
             <li>Plaza Monseñor De Andrea: Anchorena y Av. Córdoba </li>
             <li>Plazoleta Reino de Tailandia: Av. Pueyrredón y Vicente López</li>
-           <ul>Comuna3</ul>
+           <ul class="comuna">Comuna 3</ul>
             <li>Plaza 1ro de Mayo: Hipólito Yrigoyen y Pasco</li>
-           <ul>Comuna 4</ul>
+           <ul class="comuna">Comuna 4</ul>
             <li>Parque Patricios: Av. Caseros y Monteagudo</li>
             <li>Plaza Colombia: Av. Montes de Oca y Brandsen</li>
-           <ul>Comuna 5</ul>
+           <ul class="comuna">Comuna 5</ul>
             <li>Plaza Mariano Boedo: Estados Unidos y Sánchez de Loria</li>
             <li>Plaza Almagro: Sarmiento y Bulnes</li>
-           <ul>Comuna 6</ul>
+           <ul class="comuna">Comuna 6</ul>
             <li>Parque Rivadavia: Av. Rivadavia y Florencio Balcarce</li>
             <li>Parque Centenario: Av. Patricias Argentinas y Av. Roentgen</li>
-           <ul>Comuna 7</ul>
+           <ul class="comuna">Comuna 7</ul>
             <li>Plaza Pueyrredón: Yerbal y Artigas</li>
             <li>Parque Chacabuco: Av. Asamblea y Hortiguera</li>
-           <ul>Comuna 8</ul>
+           <ul class="comuna">Comuna 8</ul>
             <li>Plaza Sudamérica: Av. Piedra Buena y Av. Fernández de la Cruz</li>
             <li>Estación Villa Soldati: Lafuente y Corrales</li>
-           <ul>Comuna 9</ul>
+           <ul class="comuna">Comuna 9</ul>
             <li>Parque Avellaneda: Av. Directorio y Fernández </li>
             <li>Parque Santojanni: Lisandro de La Torre y Patrón</li>
-           <ul>Comuna 10</ul>
+           <ul class="comuna">Comuna 10</ul>
             <li>Plaza Don Bosco: Av. Lope de Vega y Elpidio González</li>
             <li>Plaza Vélez Sarfield: Av. Avellaneda y Chivilcoy</li>
-           <ul>Comuna 11</ul>
+           <ul class="comuna">Comuna 11</ul>
             <li>Plaza Aristóbulo del Valle: Campana y Baigorria </li>
             <li>Plaza Arenales: Nueva York y Mercedes </li>
-           <ul>Comuna 12</ul>
+           <ul class="comuna">Comuna 12</ul>
             <li>Parque Saavedra: Roque Pérez y Paroissien</li>
             <li>Plaza Leandro N. Alem: Artigas y Larsen</li>
-           <ul>Comuna 13</ul>
+           <ul class="comuna">Comuna 13</ul>
             <li>Plaza Manuel Belgrano: Cuba y Av. Juramento</li>
             <li>Plaza Balcarce: Manzanares y Vuelta de Obligado</li>
-           <ul>Comuna 14</ul>
+           <ul class="comuna">Comuna 14</ul>
             <li>Plaza Güemes: Medrano y Charcas</li>
             <li>Plaza República de Bolivia: Av. Libertador y Olleros</li>
             <li>Plaza Palermo Viejo: Malabia y Costa Rica</li>
-           <ul>Comuna 15</ul>
+           <ul class="comuna">Comuna 15</ul>
             <li>Parque Los Andes: Av. Dorrego y Av. Guzmán</li>
             <li>Plaza 25 de Agosto: Charlone y Heredia</li>
        </div>
