--- a/borrador.html
+++ b/borrador.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Proyecto reciclaje</title>
-    <link rel="stylesheet" href="/inicio.css">
+    <link rel="stylesheet" href="inicio.css">
 </head>
 <body>
     <header>
