--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo">Utilizar, Reciclar y vivir más</h1>
+        <h1 class="titulo">Utilizar, Reciclar y vivir más cambiado</h1>
         <!--Acá va el menu-->
         <div>
            <ul>
