--- a/index.html
+++ b/index.html
@@ -3,31 +3,58 @@
 <head>
     <meta charset="UTF-8" />
     <title>Proyecto reciclaje</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="inicio.css">
-    <script src="./script.js"></script>
+   
 </head>
 <body>
     <header>
-        <h1 class="titulo">Utilizar, Reciclar y vivir más cambiado</h1>
+        <h1 class="titulo">Utilizar, Reciclar y vivir más</h1>
         <!--Acá va el menu-->
-        <div>
-           <ul>
-            <li> <a href="inicio.html">Inicio</a></li>   
-            <li> <a href="¿Qué pasa en el mundo?">¿Qué pasa en el mundo?</a></li>
-            <li> <a href="Proyectos simples de recliclaje a menor escala">Proyectos simples de recliclaje a menor escala</a></li>
-                <ul>
-                    <li> <a href="telas.html">Reciclaje con telas</a></li>
-                    <li> <a href="pilas.html">Reciclaje con baterías/pilas</a></li>
-                    <li> <a href="botellas.html">Reciclaje con botellas</a></li> <!--PROYECTO BOTELLAS DE AMOR-->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#¿Qué-pasa-mundo?">Intro</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#recliclaje-menor-escala">Proyectos</a>
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Puntos-verdes">Mapa</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Reciclaje
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="botellas.html">Botellas</a></li>
+                        <li><a class="dropdown-item" href="pilas.html">Pilas</a></li>
+                         <li><a class="dropdown-item" href="telas.html">Telas</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                  </li>
                 </ul>
-            <li> <a href="Juegos interactivos">Juegos interactivos</a></li> <!--acá me refiero a algún forms o formas para interactuar con las ppl-->
-            <li> <a href="Puntos verdes en C.A.B.A.">Puntos verdes en C.A.B.A.</a></li>
-           </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+          <br>
+
+        <div>
+
         </div>
     </header>
     <main>
         <!--Esta sería una pequeña intro-->
-       <div>
+       <div id="¿Qué-pasa-mundo?">
         <h3 class="subtitulo">¿Hasta cuándo vamos a seguir contaminando y destruyendo este planeta?</h3>
         <h4>
             <p class="texto" > Hasta donde sabemos,  la contaminación se ha convertido en uno de los desafíos más urgentes y complejos a los que nos enfrentamos. Afecta a todos los rincones del planeta y tiene un impacto significativo en la salud humana, la biodiversidad y el equilibrio de los ecosistemas. A través de esta plataforma, nos comprometemos a informar, educar y movilizar a las personas para que comprendan mejor la naturaleza de la contaminación y sus consecuencias, así como las acciones que podemos tomar para mitigar sus efectos. <br> 
@@ -37,7 +64,7 @@
             </h4>
        </div>
         <!--acá empezamos con el tema de lo q pasa en el mundo (datos reales, algún link de algun noticia x ahí, videos, imágenes); abarcamos el tema de la CONTAMINACIÓN-->
-       <div>
+       <div id="recliclaje-menor-escala">
           <h3 class="subtitulo">¿Qué deberíamos hacer para mejorar nuestra situación?</h3>
           <h4>
               <p>Te invitamos a participar en nuestros proyectos de sostenibilidad y acción ciudadana. Estas iniciativas están diseñadas para que cada individuo pueda aportar su granito de arena y ser parte de un movimiento global para combatir la contaminación y proteger nuestro planeta. <br>
@@ -52,7 +79,7 @@
            </ol></p>
        </div>
         
-       <div> <!--acá dejamos la información sobre los puntos verdes (agregamos direcciones, mapas, alguna info con texto)-->
+       <div id="Puntos-verdes"> <!--acá dejamos la información sobre los puntos verdes (agregamos direcciones, mapas, alguna info con texto)-->
            <h3 class="subtitulo">¿Dónde podemos encontrar PUNTOS VERDES en C.A.B.A.?</h3>
            <img src="https://observatorioamba.org/images/pyp/interactivos/caba.jpg" alt="mapa" style="width:500px;height:600px;">
            <ul class="comuna">Comuna 1</ul>
@@ -105,5 +132,7 @@
     <!--La parte de algo interactivo como un forms lo vemos desp y si quieren agregar algo más como alguna info sobre nos o alguna caja para que pregunten cualquier duda que tenga la persona q esté en la web-->
 
     </main>
+    <script src="javascrpt.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
