--- a/contexmundi.html
+++ b/contexmundi.html
@@ -10,14 +10,9 @@
     <header>
         <h1 class="titulo">Utilizar, Reciclar y vivir más</h1>
         <!--Acá va el menu-->
-        <button type="button" class="btn btn-primary">Primary</button>
-        <button type="button" class="btn btn-secondary">Secondary</button>
-        <button type="button" class="btn btn-success">Success</button>
-        <button type="button" class="btn btn-danger">Danger</button>
-        <button type="button" class="btn btn-warning">Warning</button>
-        <button type="button" class="btn btn-info">Info</button>
-        <button type="button" class="btn btn-light">Light</button>
-        <button type="button" class="btn btn-dark">Dark</button>
-        <button type="button" class="btn btn-link">Link</button>
-       
+        <button type="button" class="btn btn-inicio">Inicio</button>
+        <button type="button" class="btn btn-contextomundi">¿Qué pasa en el mundo?</button>
+        <button type="button" class="btn btn-Proyectos">¿Cómo puedo ayudar?</button>
+        <button type="button" class="btn btn-juegos">Juegos Interactivos</button>
+        <button type="button" class="btn btn-mapa">Puntos Verdes</button>       
     </header>
