--- a/contexmundi.html
+++ b/contexmundi.html
@@ -12,16 +12,15 @@
         <!--Acá va el menu-->
         <button type="button" class="btn btn-inicio">Inicio</button>
         <button type="button" class="btn btn-contextomundi">¿Qué pasa en el mundo?</button>
-        <div class="btn-group" role="group">
-            <button type="button" class="btn btn-contextmundi-toggle" data-bs-toggle="contextmundi" aria-expanded="false">
-              ¿Cómo puedo ayudar a mejorar el planeta?
-            </button>
-            <ul class="contextmundi-menu">
-              <li><a class="proyectos-item" href="#">Reciclaje: Botellas</a></li>
-              <li><a class="proyectos-item" href="#">Reciclaje: Pilas</a></li>
-              <li><a class="proyectos-item" href="#">Reciclaje: Telas</a></li>
-            </ul>
-        </div>
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            ¿Cómo puedo ayudar?
+        </a>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="botellas.html">Recliclaje: Botellas</a></li>
+            <li><a class="dropdown-item" href="pilas.html">Reciclaje: Pilas</a></li>
+            <li><a class="dropdown-item" href="telas.html">Reciclaje: Telas</a></li>
+        </ul>
         <button type="button" class="btn btn-juegos">Juegos Interactivos</button>
         <button type="button" class="btn btn-mapa">Puntos Verdes</button>       
     </header>
