--- a/contexmundi.html
+++ b/contexmundi.html
@@ -10,17 +10,22 @@
     <header>
         <h1 class="titulo">Utilizar, Reciclar y vivir más</h1>
         <!--Acá va el menu-->
-        <button type="button" class="btn btn-inicio">Inicio</button>
-        <button type="button" class="btn btn-contextomundi">¿Qué pasa en el mundo?</button>
-        <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            ¿Cómo puedo ayudar?
-        </a>
-        <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="botellas.html">Recliclaje: Botellas</a></li>
-            <li><a class="dropdown-item" href="pilas.html">Reciclaje: Pilas</a></li>
-            <li><a class="dropdown-item" href="telas.html">Reciclaje: Telas</a></li>
-        </ul>
-        <button type="button" class="btn btn-juegos">Juegos Interactivos</button>
-        <button type="button" class="btn btn-mapa">Puntos Verdes</button>       
+        <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+          <button type="button" class="btn btn-inicio">Inicio</button>
+          <button type="button" class="btn btn-contextmundi">¿Qué pasa en el mundo?</button>
+
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+              ¿Cómo puedo ayudar?
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="botellas.html">Recliclaje: Botellas</a></li>
+              <li><a class="dropdown-item" href="pilas.html">Reciclaje: Pilas</a></li>
+              <li><a class="dropdown-item" href="telas.html">Reciclaje: Telas</a></li>
+            </ul>
+          </div>
+            
+          <button type="button" class="btn btn-juegos">Juegos Interactivos</button>
+          <button type="button" class="btn btn-mapa">Puntos Verdes</button>   
+        </div>   
     </header>
