--- a/contexmundi.html
+++ b/contexmundi.html
@@ -14,6 +14,20 @@
           <button type="button" class="btn btn-inicio">Inicio</button>
           <button type="button" class="btn btn-contextmundi">¿Qué pasa en el mundo?</button>
 
+         <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Reciclaje
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="botellas.html">Botellas</a></li>
+                        <li><a class="dropdown-item" href="pilas.html">Pilas</a></li>
+                         <li><a class="dropdown-item" href="telas.html">Telas</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
           <div class="btn-group" role="group">
             <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
               ¿Cómo puedo ayudar?
