--- a/contexmundi.html
+++ b/contexmundi.html
@@ -20,9 +20,9 @@
               ¿Cómo puedo ayudar?
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="botellas.html">Recliclaje: Botellas</a></li>
-              <li><a class="dropdown-item" href="pilas.html">Reciclaje: Pilas</a></li>
-              <li><a class="dropdown-item" href="telas.html">Reciclaje: Telas</a></li>
+              <li><a class="dropdown-item" href="botellas.html">Botellas</a></li>
+              <li><a class="dropdown-item" href="pilas.html">Pilas</a></li>
+              <li><a class="dropdown-item" href="telas.html">Telas</a></li>
             </ul>
           </div>
             
