--- a/contexmundi.html
+++ b/contexmundi.html
@@ -15,17 +15,17 @@
           <button type="button" class="btn btn-contextmundi">¿Qué pasa en el mundo?</button>
           <button type="button" class="btn btn-juegos">Juegos Interactivos</button>
           <button type="button" class="btn btn-mapa">Puntos Verdes</button>   
-          <div class="btn-group" role="group">
-            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-              ¿Cómo puedo ayudar?
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="botellas.html">Botellas</a></li>
-              <li><a class="dropdown-item" href="pilas.html">Pilas</a></li>
-              <li><a class="dropdown-item" href="telas.html">Telas</a></li>
-            </ul>
+          <div class="btn-group">
+              <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                Action
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="botellas.html">Reciclaje con botellas</a></li>
+                <li><a class="dropdown-item" href="pilas.html">Reciclaje con pilas</a></li>
+                <li><a class="dropdown-item" href="telas.html">Reciclaje con telas</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li>
+              </ul>
           </div>
-            
-
         </div>   
     </header>
