--- a/contexmundi.html
+++ b/contexmundi.html
@@ -17,14 +17,12 @@
           <button type="button" class="btn btn-mapa">Puntos Verdes</button>   
           <div class="btn-group">
               <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                Action
+                ¿Cómo puedo ayudar?
               </button>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="botellas.html">Reciclaje con botellas</a></li>
                 <li><a class="dropdown-item" href="pilas.html">Reciclaje con pilas</a></li>
                 <li><a class="dropdown-item" href="telas.html">Reciclaje con telas</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Separated link</a></li>
               </ul>
           </div>
         </div>   
