--- a/contexmundi.html
+++ b/contexmundi.html
@@ -10,20 +10,48 @@
     <header>
         <h1 class="titulo">Utilizar, Reciclar y vivir más</h1>
         <!--Acá va el menu-->
-        <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-          <button type="button" class="btn btn-inicio">Inicio</button>
-          <button type="button" class="btn btn-contextmundi">¿Qué pasa en el mundo?</button>
-          <button type="button" class="btn btn-juegos">Juegos Interactivos</button>
-          <button type="button" class="btn btn-mapa">Puntos Verdes</button>   
-          <div class="btn-group">
-              <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                ¿Cómo puedo ayudar?
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#inicio.html">Inicio</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
               </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="botellas.html">Reciclaje con botellas</a></li>
-                <li><a class="dropdown-item" href="pilas.html">Reciclaje con pilas</a></li>
-                <li><a class="dropdown-item" href="telas.html">Reciclaje con telas</a></li>
-              </ul>
-          </div>
-        </div>   
+              <a class="navbar-brand" href="#contextmundi.html">¿Qué pasa en el mundo?</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#juegos">Juegos interactivos</a>
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Puntos-verdes">Puntos Verdes</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      ¿Cómo puedo ayudar?
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="botellas.html">Botellas</a></li>
+                        <li><a class="dropdown-item" href="pilas.html">Pilas</a></li>
+                         <li><a class="dropdown-item" href="telas.html">Telas</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+          <br>
+
+        <div>
+
+        </div>
     </header>
