--- a/contexmundi.html
+++ b/contexmundi.html
@@ -12,4 +12,14 @@
         <!--Acá va el menu-->
         <a href="#índice.html" class="btn btn-primary disabled" tabindex="-1" role="button" aria-disabled="true">Inicio</a>
         <a href="#contenidomundi.html" class="btn btn-secondary disabled" tabindex="-1" role="button" aria-disabled="true">¿Qué pasa en el mundo?</a>
+
+        <div class="btn-group" role="group">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+              <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+            </ul>
+        </div>
     </header>
